Modifica file package.json

--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   "main": "index.html",
   "repository": "https://github.com/manfredi123/Sito-Cocktail.git",
   "author": "manfredi",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "build": "yarn run build"
+  }
 }
